# qwen3-tts-jetson

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: build_fp16_engine.py  convert_code_predictor_to_coreml.py  convert_tokenizer_to_gguf.py  convert_tts_to_gguf.py  export_code_predictor.py  setup_pipeline_models.py
src/: audio_tokenizer_decoder.cpp  audio_tokenizer_decoder.h  audio_tokenizer_encoder.cpp  audio_tokenizer_encoder.h  coreml_code_predictor.mm  gguf_loader.cpp  gguf_loader.h  main.cpp  qwen3_tts.cpp  qwen3_tts.h  text_tokenizer.cpp  trt_code_predictor.cpp  trt_code_predictor.h  trt_cuda_kernels.cu  trt_vocoder.cpp  trt_vocoder.h  tts_transformer.cpp  tts_transformer.h
tests/: test_tokenizer.cpp
